@@ -61,6 +61,7 @@ Engine fixes:
 * Fix 'respec' events to no longer remove item-based powers from the action bar.
 * Fix log message when gaining more than one level at once.
 * Fixed excessive memory usage when using Items, ItemSets, and Powers with high-value IDs.
+* Fix bug where power upgrades that didn't require power points would not automatically upgrade if other requirements were met.
 
 Game updates:
 
